force-app/main/default/objects/Company_Group__c/Company_Group__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant GRACE
2. ZRD
3. SF-50</description>
    <label>Konzerngruppe</label>
    <nameField>
        <label>Company Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Konzerngruppen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>