force-app/main/default/objects/Company_Group__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant - GRACE
2. ZRD
3. SF-938</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Company_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>