force-app/main/default/objects/Company_Group__c/fields/Company_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_Group_ID__c</fullName>
    <description>1. Integration relevant - GRACE
2. ZRD
3. External ID for integration of Company Groups with GRACE</description>
    <externalId>true</externalId>
    <label>Company Group ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>