force-app/main/default/objects/Company_Group__c/fields/Company_Group_Info__c.field-meta.xml
<CustomField>
    <fullName>Company_Group_Info__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1038. This info will be displayed on all related Accounts.</description>
    <label>Company Group Info</label>
    <length>250</length>
    <type>Text</type>
</CustomField>