force-app/main/default/objects/Company_Group__c/fields/Info_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Info_Creation_Date__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1038. Gets automatically filled.</description>
    <label>Info Creation Date</label>
    <type>Date</type>
</CustomField>