force-app/main/default/objects/Company_Group__c/fields/Info_Creator__c.field-meta.xml
<CustomField>
    <fullName>Info_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Not integration relevant.
2. ZRD
3. SF-1038. Gets automatically filled with User who entered the Company Group Info.</description>
    <label>Info Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Company_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>