force-app/main/default/objects/Company_Group__c/fields/Info_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Info_Valid_Until__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1038</description>
    <label>Info Valid Until</label>
    <type>Date</type>
</CustomField>