force-app/main/default/objects/Company_Group__c/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant - GRACE
2. ZRD
3.</description>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>