force-app/main/default/objects/Company_Group__c/fields/Large_Account__c.field-meta.xml
<CustomField>
    <fullName>Large_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant - GRACE
2. ZRD
3. SF-938</description>
    <label>Large Account</label>
    <type>Checkbox</type>
</CustomField>