force-app/main/default/objects/Company_Group__c/validationRules/Info_Valid_Until_max_12_months.validationRule-meta.xml
<ValidationRule>
    <fullName>Info_Valid_Until_max_12_months</fullName>
    <active>true</active>
    <description>SF-1038. Makes sure that the Info Valid Until Date is max. 12 months (365 days) in the future.</description>
    <errorConditionFormula>NOT(ISBLANK( Info_Valid_Until__c )) &amp;&amp; NOT(ISBLANK( Company_Group_Info__c ))  &amp;&amp; ( (Info_Valid_Until__c - TODAY())  &gt; 365)</errorConditionFormula>
    <errorDisplayField>Info_Valid_Until__c</errorDisplayField>
    <errorMessage>The Company Info can only be valid for max. 12 months.</errorMessage>
</ValidationRule>