force-app/main/default/objects/Company_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Group_ID__c</columns>
    <columns>Key_Account__c</columns>
    <columns>Large_Account__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Konzerngruppen</label>
</ListView>