force-app/main/default/objects/Company_Group__c/listViews/Meine_Konzerngruppen.listView-meta.xml
<ListView>
    <fullName>Meine_Konzerngruppen</fullName>
    <columns>NAME</columns>
    <columns>Company_Group_ID__c</columns>
    <columns>Key_Account__c</columns>
    <columns>Large_Account__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User_is_AM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Meine Konzerngruppen</label>
</ListView>